# sierra-agent

./: README.md  main.py  pyproject.toml
agent/: __init__.py  conversation.py  types.py
agent/services/: __init__.py  orders.py  products.py
agent/utils/: __init__.py  agent_utils.py  order_utils.py  product_utils.py
api/: main.py
api/models/: __init__.py  order.py  products.py
api/routes/: __init__.py  orders.py  products.py
data/: CustomerOrders.json  ProductCatalog.json
evals/: __init__.py  metrics.py  test_cases.py
